--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev:server": "nodemon ./bin/www",
+    "dev:server": "nodemon src/server",
     "build": "rollup -c",
     "dev:client": "rollup -c -w",
     "start": "sirv public",
@@ -14,6 +14,7 @@
     "chart.js": "^2.9.3",
     "concurrently": "^5.1.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
