--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.2",
     "sirv-cli": "^0.4.4",
-    "twilio": "^3.41.1"
+    "twilio": "^3.41.1",
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "rollup": "^1.20.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
