--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=8 <9",
+    "yarn": ">=1.10"
   }
 }
