--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "client":"rollup -c -w",
-    "start": "sirv public",
+    "dev:start": "sirv public",
     "client:build": "rollup -c",
     "server": "nodemon src/server",
 
-    "build": "npm run server",
+    "start": "npm run server",
     "dev": "concurrently --kill-others \"npm run client\" \"npm run server\""
   },
   "dependencies": {
