--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "client":"rollup -c -w",
+    "client": "rollup -c -w",
     "dev:start": "sirv public",
     "client:build": "rollup -c",
     "server": "nodemon src/server",
-
     "start": "npm run server",
     "dev": "concurrently --kill-others \"npm run client\" \"npm run server\""
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "concurrently": "^5.1.0",
@@ -23,15 +25,13 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.2",
-    "sirv-cli": "^0.4.4",
-    "twilio": "^3.41.1",
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "sirv-cli": "^0.4.4",
+    "svelte": "^3.0.0",
+    "twilio": "^3.41.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
