--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.2",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
