--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-terser": "^5.1.2",
     "sirv-cli": "^0.4.4",
     "svelte": "^3.0.0",
+    "svelte-select": "^3.6.2",
     "twilio": "^3.41.1"
   },
   "devDependencies": {
